# openusage

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_OVERVIEW.md  OWNER_FOLLOW.md  OWNER_GUIDE.md  Package.resolved  Package.swift  README.md  SECURITY.md  TRADEMARK.md  UsageMeter.Windows.slnx  add_provider_sup_win.md  appcast.xml  conductor.json  copy-bundled.cjs  index.html  install.sh  package-lock.json  package.json  pricing_supplement.json  skills-lock.json  tsconfig.json  vite.config.ts
.1code/: worktree.json
.cursor/: worktrees.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
OpenUsageWidgets.xcodeproj/: project.pbxproj
coverage/: index.html  lcov.info
crates/openusage-cli/: Cargo.toml
crates/openusage-cli/src/: config.rs  format_json.rs  format_table.rs  main.rs  setup.rs  terminal.rs
crates/openusage-waybar/: Cargo.toml
crates/openusage-waybar/src/: main.rs
crates/plugin-engine/: Cargo.toml
crates/plugin-engine/src/: lib.rs  manifest.rs  runtime.rs
docs/: README.md  adding-a-provider.md  app-state-architecture.md  architecture.md  breadcrumbs.md  capture-logs.md  choices.md  cli.md  dashboard.md  debugging.md  icloud-sync.md  local-http-api.md  logging.md  macos-widgets.md  menu-bar.md  pricing.md  privacy.md  provider-enablement.md  proxy.md  refreshing.md  release-and-winget.md  resource-budget.md  security-audit-2026-02-06.md  settings.md  spec-next-update-label-refresh.md  updates.md  windows-setup.md  windows.md
src/: App.tsx  (+5 more)
(+1041 files in other folders)
