[package]
name = "openusage-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openusage"
path = "src/main.rs"

[dependencies]
openusage-plugin-engine = { path = "../plugin-engine" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
crossterm = "0.28"
