[package]
name = "openusage-waybar"
version = "0.6.9"
edition = "2024"

[[bin]]
name = "openusage-waybar"
path = "src/main.rs"

[dependencies]
openusage-plugin-engine = { path = "../openusage-plugin-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
