[package]
name = "openusage-plugin-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen"] }
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
dirs = "6"
base64 = "0.22"
log = "0.4"
regex-lite = "0.1.9"
